--- a/css/style.css
+++ b/css/style.css
@@ -2,6 +2,7 @@
 :root {
   --om-primary: #dc5f00;
   --om-primary-dark: #c15300;
+  --om-primary-dark2: #70380d;
   --om-primary-subtle: #e0721f;
   --om-primary-subtle2: #e78f4d;
   --om-primary-subtle3: #eeaf80;
@@ -26,6 +27,9 @@
 }
 .bg-primary-dark {
   background-color: var(--om-primary-dark) !important;
+}
+.bg-primary-dark2 {
+  background-color: var(--om-primary-dark2) !important;
 }
 .bg-primary-subtle {
   background-color: var(--om-primary-subtle) !important;
@@ -61,27 +65,27 @@
 
 * {
   font-family: iranSans;
+  box-sizing: border-box;
 }
 
-body{
+body {
   padding-top: 0;
 }
 
-.header{
-  height : 40vh;
+.header {
+  height: 40vh;
 }
-.main{
+.main {
   margin-top: 44vh !important;
 }
 
-.title-a{
+.title-a {
   position: absolute;
   margin-top: -43vh;
 }
-.title-p{
+.title-p {
   position: relative;
 }
-
 
 .cat-item {
   width: 150px;
@@ -127,6 +131,7 @@ a {
   scrollbar-width: none;
   -webkit-scrollbar: none;
   -ms-overflow-style: none;
+  scroll-behavior: smooth;
 }
 
 .border-dotted {
@@ -141,17 +146,91 @@ ul > li:last-child {
   border-bottom: none !important ;
 }
 
-/* .header {
-  position: sticky;
-  top: 0px;
-} */
-
-
-
-.black{
-  /* background-color: black !important; */
+.black {
   scale: 1.2;
   transition: all 0.7s;
-  
+}
+li {
+  cursor: pointer;
 }
 
+.dialog {
+  visibility: hidden;
+
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  max-height: 95% !important;
+  z-index: 2000;
+  position: fixed;
+  transition: opacity 1s;
+}
+
+.dialog-show {
+  visibility: visible;
+}
+.dialog-hide {
+  visibility: hidden;
+}
+
+.fade-in {
+  animation: fade-in 1s forwards;
+}
+.fade-out {
+  animation: fade-out 1s forwards;
+}
+
+@keyframes fade-in {
+  0% {
+    opacity: 0;
+  }
+  100% {
+    opacity: 1;
+  }
+}
+@keyframes fade-out {
+  0% {
+    opacity: 1;
+  }
+  100% {
+    opacity: 0;
+  }
+}
+
+.dialog img {
+  max-width: 100%;
+}
+
+.dialog-desc {
+  background: linear-gradient(var(--om-secondary-subtle2) 0%, transparent 60%);
+}
+
+.dialog-title-container {
+  width: 100%;
+  touch-action: pan-x;
+}
+
+.dialog button:active {
+  box-shadow: inset 0 0 0 2px var(--om-secondary-subtle2) !important;
+}
+
+.add-btn:hover {
+  background-color: var(--om-primary-dark2) !important;
+  transition: all 0.5s;
+}
+
+.added-to-card {
+  text-align: center;
+}
+.added-to-card ul {
+  all: unset;
+}
+.added-to-card ul > li:nth-child(odd) {
+  all: unset;
+  cursor: pointer;
+}
+.added-to-card ul > li:nth-child(even) {
+  all: unset;
+  cursor: default !important;
+  opacity: 0.7;
+}
