--- a/css/style.css
+++ b/css/style.css
@@ -1,5 +1,5 @@
 @import url("https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.1/font/bootstrap-icons.css");
-:root {
+:root.default-theme {
   --om-primary: #dc5f00;
   --om-primary-dark: #c15300;
   --om-primary-dark2: #70380d;
@@ -19,6 +19,48 @@
   --om-info-dark: #0e8590;
   --om-blue: #081d40;
 }
+
+:root.theme1 {
+  --om-primary: #bb2f98;
+  --om-primary-dark: #52063f;
+  --om-primary-dark2: #300324;
+  --om-primary-subtle: #f743ca;
+  --om-primary-subtle2: #f172d1;
+  --om-primary-subtle3: #f2a5df;
+
+  --om-secondary: #1b1b1d;
+  --om-secondary-subtle: #3c3f46;
+  --om-secondary-subtle2: #545760;
+  --om-secondary-subtle3: #767a86;
+
+  --om-success: #890baf;
+  --om-dark: #570670;
+  --om-dark-subtle: #6e0b8c;
+  --om-info: #42b7bb;
+  --om-info-dark: #307379;
+  --om-blue: #3542cf;
+}
+:root.theme2 {
+  --om-primary: #3c1ccd;
+  --om-primary-dark: #1d0b6b;
+  --om-primary-dark2: #080321;
+  --om-primary-subtle: #5435df;
+  --om-primary-subtle2: #8169ed;
+  --om-primary-subtle3: #9a85f5;
+
+  --om-secondary: #171328;
+  --om-secondary-subtle: #201f28;
+  --om-secondary-subtle2: #32303a;
+  --om-secondary-subtle3: #49484b;
+
+  --om-success: #042bae;
+  --om-dark: #182349;
+  --om-dark-subtle: #172348;
+  --om-info: #42b7bb;
+  --om-info-dark: #307379;
+  --om-blue: #3542cf;
+}
+
 .bg-primary {
   background-color: var(--om-primary) !important;
 }
@@ -156,7 +198,6 @@ li {
 
 .dialog {
   visibility: hidden;
-
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
@@ -197,16 +238,6 @@ li {
   }
 }
 
-
-
-
-
-
-
-
-
-
-
 .fade-in-width {
   animation: fade-in-width 1s forwards;
 }
@@ -230,16 +261,6 @@ li {
     width: 0;
   }
 }
-
-
-
-
-
-
-
-
-
-
 
 .dialog img {
   max-width: 100%;
@@ -281,9 +302,90 @@ li {
 
 .order-list-icon {
   cursor: pointer;
-  z-index: 999999999 !important;
+  z-index: 3000 !important;
 }
 .order-list-content {
   z-index: 1 !important;
 }
 
+.theme-container {
+  z-index: 1040 !important;
+}
+.theme-active {
+  left: 0%;
+  animation: theme-open 1s forwards;
+}
+
+@media (max-width: 576px) {
+  .theme-hide {
+    left: -10%;
+    animation: theme-close 1s forwards;
+  }
+  @keyframes theme-open {
+    from {
+      left: -10%;
+    }
+  }
+}
+
+@media (min-width: 576px) {
+  .theme-hide {
+    left: -7%;
+    animation: theme-close 1s forwards;
+  }
+  @keyframes theme-open {
+    from {
+      left: -7%;
+    }
+  }
+}
+@media (min-width: 768px) {
+  .theme-hide {
+    left: -4%;
+    animation: theme-close 1s forwards;
+  }
+  @keyframes theme-open {
+    from {
+      left: -4%;
+    }
+  }
+}
+
+@media (min-width: 992px) {
+  .theme-hide {
+    left: -3%;
+    animation: theme-close 1s forwards;
+  }
+  @keyframes theme-open {
+    from {
+      left: -3%;
+    }
+  }
+}
+
+@keyframes theme-close {
+  from {
+    left: 0%;
+  }
+}
+
+.theme-settings-icon {
+  z-index: 2050 !important;
+  cursor: pointer;
+}
+.themes span {
+  cursor: pointer;
+}
+
+@keyframes rotate {
+  0% {
+    transform: rotate(0deg);
+  }
+  100% {
+    transform: rotate(360deg);
+  }
+}
+
+.rotate {
+  animation: rotate 3s linear infinite;
+}
