--- a/safoora/css/style.css
+++ b/safoora/css/style.css
@@ -107,7 +107,7 @@ body {
 }
 
 .header {
-  height: 370px;
+  height: 270px;
   width: 95%;
   display: flex;
   flex-direction: column;
@@ -122,24 +122,23 @@ body {
 }
 
 .logo {
-  width: 60%;
-  height: 100px;
+  width: 50%;
+  height: 70px;
   display: flex;
   align-items: center;
-  justify-content: space-around;
+  justify-content: space-between;
   margin-left: 30%;
-  margin-bottom: 20px;
-  margin-top: 20px;
+
 }
 
 #logo {
-  width: 100px;
-  height: 100px;
+  width: 50px;
+  height: 50px;
 }
 
 #logo img {
-  width: 100px;
-  height: 100px;
+  width: 50px;
+  height: 50px;
   border-radius: 50%;
 }
 
@@ -149,8 +148,6 @@ body {
   display: flex;
   justify-content: space-between;
   align-items: center;
-  margin-top: 20px;
-  margin-bottom: 10px;
   box-shadow: 0 2px 4px rgba(0, 0, 0, 0.25);
   border-radius: 20px;
 }
@@ -214,8 +211,6 @@ body {
   width: 100%;
   display: flex;
   justify-content: center;
-  margin-top: 20px;
-  margin-bottom: 20px;
 }
 
 #navbar-category {
@@ -239,7 +234,7 @@ body {
   background: var(--clr-bg-item-nav);
   margin-left: 40px;
   margin-right: 5px;
-  transition: all 0.5s ease;
+  transition: all 0.6s ease;
   box-shadow: inset -5px -5px 6px rgba(0, 0, 0, 0.25),
     5px 5px 6px rgba(0, 0, 0, 0.25);
 }
@@ -252,9 +247,15 @@ body {
   height: 110px;
   width: 110px;
   display: flex;
+  border-radius: 15px;
   flex-direction: column;
   justify-content: space-around;
   align-items: center;
+  transition: all 0.7s ease;
+}
+
+.menu-box:hover {
+  background-color: #faf0ca;
 }
 
 h3 {
@@ -263,7 +264,7 @@ h3 {
 
 #container-title-category a {
   position: absolute;
-  margin-top: -390px;
+  margin-top: -300px;
 }
 
 .menu-box img {
@@ -280,7 +281,7 @@ h3 {
 .main {
   width: 100%;
   padding: 5%;
-  margin-top: 380px;
+  margin-top: 260px;
   background: var(--clr-bg-main);
   border-radius: 10px;
 }
@@ -606,13 +607,13 @@ a {
   justify-content: space-between;
   background-color: var(--clr-bg-container-modal-baverage);
   border-radius: 15px;
-  /* visibility: hidden; */
   transition: all 0.5s ease-in-out;
   position: fixed;
   padding-top: 10px;
   z-index: 999;
 }
-.hidden{
+
+.hidden {
   visibility: hidden !important;
 }
 
@@ -630,6 +631,7 @@ a {
   height: 60%;
   border-radius: 10px;
   box-shadow: 4px 4px 3px rgba(0, 0, 0, 0.35);
+  margin-top: 7px;
 }
 
 .Beverage-modal {
@@ -664,27 +666,30 @@ a {
 }
 
 .close-modal {
-  width: 20%;
+  width: 13%;
   height: 35px;
-  background-color: var(--clr-bg-close-modal);
+  background-color: rgb(152, 39, 33);
+  border: 2px solid rgb(152, 39, 33);
+  box-shadow: 0px 3px 0px rgb(134, 16, 16);
   border-radius: 20px;
   font-size: 17px;
   font-family: gandom;
   display: flex;
   justify-content: center;
   align-items: center;
-  box-shadow: 0px 3px 0px #694215;
   transition: all 0.6s ease-in-out;
   cursor: pointer;
+  margin-left: 70%;
 }
 
 .close-modal:hover {
-  background-color: #ae712c;
+  background-color: rgb(140, 54, 49);
   transform: translateY(-2px);
-  box-shadow: 0px 5px 0px #694215;
+  box-shadow: 0px 5px 0px rgb(134, 16, 16);
 }
 
-.close-modal:active {
+.close-modal:active,
+.addModal:active {
   transform: translateY(0px);
   box-shadow: none;
 }
@@ -692,28 +697,20 @@ a {
 .addModal {
   width: 35%;
   height: 40px;
-  background-color: rgb(152, 39, 33);
-  border: 2px solid rgb(152, 39, 33);
+  background-color: var(--clr-bg-close-modal);
+  box-shadow: 0px 3px 0px #694215;
   border-radius: 30px;
   color: black;
-  border-radius: 30px;
   font-size: 17px;
   font-family: gandom;
-  margin-left: -45%;
-  box-shadow: 0px 3px 0px rgb(134, 16, 16);
   transition: all 0.6s ease-in-out;
   cursor: pointer;
+  border: none;
 }
-
 .addModal:hover {
-  background-color: rgb(140, 54, 49);
+  background-color: #ae712c;
   transform: translateY(-2px);
-  box-shadow: 0px 5px 0px rgb(134, 16, 16);
-}
-
-.addModal:active {
-  transform: translateY(0px);
-  box-shadow: none;
+  box-shadow: 0px 5px 0px #694215;
 }
 
 .display {
@@ -729,25 +726,27 @@ img {
   object-fit: cover;
 }
 
-.theme{
-  width: 70px;
-  height: 30px;
-  background-color:var(--clr-bg-body);
+.theme {
+  width: 55px;
+  height: 25px;
+  background-color: var(--clr-bg-body);
   display: flex;
   align-items: center;
   justify-content: center;
+  font-size: 12px;
   box-shadow: inset -5px -5px 4px rgba(0, 0, 0, 0.25),
-  5px 5px 4px rgba(0, 0, 0, 0.25);  border-radius: 10px;
+    5px 5px 4px rgba(0, 0, 0, 0.25);
+  border-radius: 10px;
 }
 
-.container-modal-theme{
+.container-modal-theme {
   position: absolute;
-  top: 10%;
-  left: 90%;
+  top: 9%;
+  left: 93%;
   transform: translate(-50%, -50%);
-  background-color:var(--clr-bg-body);
-  width: 50px;
-  height: 120px;
+  background-color: var(--clr-bg-body);
+  width: 45px;
+  height: 110px;
   display: flex;
   align-items: center;
   justify-content: center;
@@ -760,7 +759,7 @@ img {
     5px 5px 6px rgba(0, 0, 0, 0.25);
 }
 
-.btn-themes{
+.btn-themes {
   width: 95%;
   height: 90%;
   display: flex;
@@ -769,7 +768,7 @@ img {
   justify-content: space-between;
 }
 
-.button{
+.button {
   cursor: pointer;
   width: 25px;
   height: 25px;
@@ -788,7 +787,7 @@ img {
   --secondary: 80, 151, 38;
 }
 
-.button .back{
+.button .back {
   border-radius: 100%;
   position: absolute;
   left: 0;
@@ -801,7 +800,7 @@ img {
   background: rgb(var(--secondary));
 }
 
-.button .front{
+.button .front {
   border-radius: 100%;
   position: absolute;
   left: 0;
@@ -894,34 +893,40 @@ img {
 
 
 @media (max-width: 425px) {
-  .button{
+  .button {
     width: 20px;
     height: 20px;
   }
-  .container-modal-theme{
-    width: 37px;
-    height: 95px;
-    top: 8%;
+
+  #container-title-category a {
+    position: absolute;
+    margin-top: -250px;
   }
-  .theme{
+
+  .container-modal-theme {
+    width: 35px;
+    height: 85px;
+    top: 6%;
+    left: 93%;
+  }
+
+  .theme {
     width: 50px;
-    font-size: 13px;
+    font-size: 12px;
   }
-  
+
   .logo {
-    width: 60%;
-    margin-left: 20%;
-    margin-top: 10px;
+    width: 50%;
+    margin-left: 27%;
   }
 
   .addModal {
-    width: 45%;
+    width: 35%;
     font-size: 16px;
-    margin-right: -14%;
   }
 
   .close-modal {
-    width: 30%;
+    width: 15%;
     height: 30px;
     font-size: 16px;
   }
@@ -973,37 +978,22 @@ img {
     font-weight: bold;
   }
 
-  #logo {
-    margin-top: 0;
-    margin-bottom: 0px;
-  }
-
   #logo img {
-    width: 90px;
-    height: 90px;
+    width: 50px;
+    height: 50px;
   }
 
   #navbar-category {
     width: 90%;
   }
 
-  .item-nav {
-    width: 90px;
-    height: 90px;
-  }
-
-  .menu-box {
-    height: 90px;
-  }
-
   .categories {
     width: 90%;
-    margin-top: 0;
   }
 
   .p-category {
-    width: 44%;
-    height: 33px;
+    width: 42%;
+    height: 30px;
     font-size: 13px;
   }
 
@@ -1029,10 +1019,6 @@ img {
     font-size: 13px;
   }
 
-  .navbar {
-    margin-top: 0px;
-    margin-bottom: 0px;
-  }
 
   #navbar-category {
     width: 90%;
@@ -1040,8 +1026,14 @@ img {
 
   .item-nav {
     width: 110px;
-    height: 110px;
-    margin-left: 27px;
+    height: 100px;
+    margin-left: 15px;
+  }
+
+  .menu-box {
+    height: 100px;
+    width: 110px;
+
   }
 
   .menu-box img {
@@ -1049,6 +1041,7 @@ img {
     height: 55px;
     margin-bottom: 12px;
     margin-top: 10px;
+
   }
 
   .title {
@@ -1109,7 +1102,7 @@ img {
   }
 
   .header {
-    height: 310px;
+    height: 240px;
   }
 
   .Beverage-title {
@@ -1128,7 +1121,7 @@ img {
   }
 
   .main {
-    margin-top: 310px;
+    margin-top: 240px;
   }
 
   .container-modal-baverage {
@@ -1137,28 +1130,36 @@ img {
 }
 
 @media (max-width: 375px) {
-  .button{
+  .button {
     width: 16px;
     height: 16px;
   }
-  .container-modal-theme{
-    width: 32px;
-    height: 85px;
-    top: 8%;
-    left: 87%;
+
+  #container-title-category a {
+    position: absolute;
+    margin-top: -240px;
   }
-  .theme{
+
+  .container-modal-theme {
+    width: 32px;
+    height: 70px;
+    top: 6%;
+    left: 93%;
+  }
+
+  .theme {
     width: 45px;
     font-size: 12px;
   }
-  
+
   .logo {
-    width: 70%;
-    margin-left: 10%;
-    margin-top: 10px;
+    width: 50%;
+    margin-left: 25%;
+    margin-bottom: 3px;
   }
+
   .main {
-    margin-top: 300px;
+    margin-top: 230px;
   }
 
   .checkout {
@@ -1168,9 +1169,11 @@ img {
   #total {
     font-size: 12px;
   }
+
   .baverage-add-modal {
     margin-top: 9px;
   }
+
   .container-modal-baverage {
     width: 90%;
     height: 500px;
@@ -1179,7 +1182,6 @@ img {
   .display-box-baverage {
     height: 500px;
   }
-
 
   .Beverage-modal span {
     font-size: 18px;
@@ -1231,12 +1233,7 @@ img {
   }
 
   .header {
-    height: 300px;
-  }
-
-  #logo {
-    margin-top: 0;
-    margin-bottom: 0px;
+    height: 240px;
   }
 
   .Beverage-title {
@@ -1244,8 +1241,8 @@ img {
   }
 
   #logo img {
-    width: 90px;
-    height: 90px;
+    width: 50px;
+    height: 50px;
   }
 
   #navbar-category {
@@ -1286,23 +1283,18 @@ img {
     font-size: 12px;
   }
 
-  .navbar {
-    margin-top: 0px;
-    margin-bottom: 0px;
-  }
-
   #navbar-category {
     width: 90%;
   }
 
   .item-nav {
     width: 100px;
-    height: 100px;
+    height: 90px;
     margin-left: 20px;
   }
 
   .menu-box {
-    height: 100px;
+    height: 90px;
   }
 
   .menu-box img {
@@ -1349,34 +1341,41 @@ img {
     width: 60px;
     height: 25px;
   }
+  .addModal {
+    width: 32%;
+    height: 30px;
+    font-size: 16px;
+  }
+
+  .close-modal {
+    width: 14%;
+    height: 30px;
+    font-size: 16px;
+  }
 }
 
 @media (max-width: 320px) {
-  .button{
+  .button {
     width: 14px;
     height: 14px;
   }
-  .container-modal-theme{
+
+  .container-modal-theme {
     width: 30px;
-    height: 80px;
-    top: 8%;
-    left: 88%;
-  }
-  .theme{
-    width: 42px;
-    height: 30px;
-    font-size: 11px;
-  }
-  
-  .logo {
-    width: 60%;
-    margin-left: 10%;
-    margin-top: 10px;
+    height: 70px;
+    top: 5%;
+    left: 93%;
   }
 
   .theme {
-    display: flex;
-    flex-direction: column;
+    width: 42px;
+    height: 25px;
+    font-size: 10px;
+  }
+
+  .logo {
+    width: 50%;
+    margin-left: 25%;
   }
 
   .container-modal {
@@ -1390,16 +1389,18 @@ img {
   }
 
   .main {
-    margin-top: 260px;
+    margin-top: 190px;
   }
+
   .order-item-price,
   .order-item-title {
     font-size: 12px;
   }
+
   .container-order-list {
     width: 94%;
     height: 400px;
-   left: 3%;
+    left: 3%;
   }
 
   .checkout {
@@ -1418,10 +1419,11 @@ img {
   .display-box-baverage {
     height: 500px;
   }
-  
+
   .baverage-add-modal {
     margin-top: 10px;
   }
+
   .Beverage-modal span {
     font-size: 17px;
   }
@@ -1462,18 +1464,8 @@ img {
   }
 
   .header {
-    height: 270px;
-    justify-content: center;
-  }
+    height: 205px;
 
-  .categories {
-    margin-top: 0px;
-    margin-bottom: 0;
-  }
-
-  #logo {
-    margin-top: 10px;
-    margin-right: 20px;
   }
 
   .Beverage-title {
@@ -1481,8 +1473,8 @@ img {
   }
 
   #logo img {
-    width: 80px;
-    height: 80px;
+    width: 50px;
+    height: 50px;
   }
 
   #container-title-category {
@@ -1532,13 +1524,18 @@ img {
   }
 
   .menu-box {
+    width: 90px;
     height: 80px;
   }
 
   .menu-box img {
     width: 35px;
     height: 35px;
-    margin-left: 20px;
+    margin-left: 28px;
+  }
+
+  .menu-box:hover {
+    background-color: #faf0ca;
   }
 
   .title {
@@ -1584,4 +1581,8 @@ img {
     height: 130px;
   }
 
+  #container-title-category a {
+    position: absolute;
+    margin-top: -230px;
+  }
 }
